--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">서울시립대학교 진로가이드</string>
     <string name="action_settings">Settings</string>
+    <string name="parse_app_id">muEpX85JFB2xzMmGzAVgMLU68HWfpFpk3298Eed3</string>
+    <string name="parse_client_key">lEh3wE3NzwjLbRGaVn5irPr8bBNkUoG0pXGLhaW8</string>
 </resources>
