--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">서울시립대학교 진로가이드</string>
+    <string name="app_name">서울시립대학교 진로진학가이드</string>
     <string name="action_settings">Settings</string>
     <string name="parse_app_id">awNZpltR59MzqDzDi7d99GQCFlZJarigNJrTdnFr</string>
     <string name="parse_client_key">XmN7QDBRHryqJW1fiYBz8MDC0TMqLTHGHoqeaYJt</string>
