--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="qna_confirm_yes">동의</string>
     <string name="kakao_confirm_title">카카오계정으로 로그인</string>
     <string name="kakao_confirm_contents">본 진로진학상담을 이용하기 위해서는 카카오 계정으로 로그인을 해야합나다. 이는 스팸 예방을 위한 인증 기능으로만 사용되며, 개인정보를 저장하지 않습니다.</string>
+    <string name="qna_count_alert">본 진로진학상담은 하루에 3회까지 올릴 수 있으며, 5분 이내 연속하여 등록할 수 없습니다.</string>
 </resources>
