--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="career_recommend_kr">진로와 관련된 추천 단과 대학</string>
     <string name="qna_confirm_title">진로진학상담 안내사항</string>
     <string name="qna_confirm_contents">진로진학 상담의 모든 글은 전채공개되므로 작성시 개인정보가 포함되지않도록 유의부탁드립니다.\n또한, 부득이 개인정보가 포함된 문의사항은 서울시립대학교 입학사정관실로 전화바랍니다.</string>
-    <string name="qna_confirm_no">나가기(비동의)</string>
+    <string name="qna_confirm_no">나가기</string>
     <string name="qna_confirm_yes">동의</string>
     <string name="kakao_confirm_title">카카오계정으로 로그인</string>
     <string name="kakao_confirm_contents">본 진로진학상담을 이용하기 위해서는 카카오 계정으로 로그인을 해야합나다. 이는 스팸 예방을 위한 인증 기능으로만 사용되며, 개인정보를 저장하지 않습니다.</string>
